# govbuilder-v2

./: .gitignore  API_SYNC_ENHANCEMENT.md  README.md  github  github.pub  index.html  package-lock.json  package.json  vite.config.ts
src/: App.vue  main.ts  motion.ts
src-tauri/: Cargo.toml  generate.py  tauri.conf.json
src-tauri/Import Files/: AccountingDetails.json  CaseTypes.json  CaseTypesTest.json
src-tauri/capabilities/: default.json  main.json
src-tauri/src/: lib.rs  main.rs
src/assets/: tailwind.css
src/components/: ApiConfigModal.vue  CodeEditor.vue  DashboardButton.vue  FilterDropdown.vue  HomeCard.vue  LiquidTag.vue  Modal.vue  NotifyRow.vue  Pagination.vue  Saved.vue  SearchInput.vue  StatusForm.vue  StepCard.vue  ThemeToggleButton.vue  TitleBar.vue  Toast.vue  Toggle.vue  ToggleRow.vue
src/pages/: Accounting.vue  CaseExport.vue  CaseWorkflows.vue  Dashboard.vue  Home.vue  InspectionTypeDetail.vue  InspectionTypes.vue  InspectionWorkflow.vue  InspectionWorkflowDetail.vue  LicenseStatusDetail.vue  LicenseStatuses.vue  LicenseWorkflows.vue  StatusDetail.vue  Statuses.vue
src/router/: index.ts
src/stores/: acountingStore.ts  caseSubTypeStore.ts  caseTypeStore.ts  inspectionTypeStore.ts  inspectionWorkflowStore.ts  licenseStatusStore.ts  licenseSubTypeStore.ts  licenseTypeStore.ts  licenseWorkflowStore.ts  projectStore.ts  statusStore.ts  workflowStore.ts
src/utils/: accountingExportUtils.ts  accountingImportUtils.ts  apiSyncUtils.ts  caseExportUtils.ts  fileImport.ts  fileImportUtils.ts  inspectionTypeExportUtils.ts  statusImportUtils.ts  (+1 more)
